daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N27_bad_review_blind/kem_block.cbor.hex
a4005840dc6d858cd2a93b6f3b3289dcfec1f449ea755a0ab06b05a8a1dbb8fa62f5f7288aef79c11564cf3e9e111155cf2546652edce1617aad875bc2b36aacda4a3e9f01584033d1b5489dd06eea5cd8d62f79b75a179b1964c2a2b1a39d1d613477fb32724a66c55987033363f55d270e2c791e49d757b53db81f7bbe5c36b9d9c77f002d17025840f6f8980fa2474918ae70f561633832116698dffa97011e587b467891df1fde5a899b1ff86fbdc54895dc6d5ff82be707ad670415e9268d00c576df36c49a939203584039f5cedf48ad68d6540ab44568712f3df2b06344d215955d45240988435185970b3885190ce04ae8ed8fe839181ea986961d63c870ad3a250e88f6538beb71cb
